--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,181 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
+}
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+.topbox {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-between;
+}
+.topo {
+  width: 100%;
+  height: 100px;
+  background-color: rgb(41, 68, 125);
+  display: flex;
+  align-items: center;
+}
+.subtopo {
+  width: 100%;
+  height: 90px;
+  background-color: rgb(4, 4, 95);
+}
+.anuncio {
+  display: none;
+  width: 100%;
+  height: 260px;
+}
+.logo {
+  height: 71px;
+  width: 71px;
+}
+.h1 {
+  font-size: 10px;
+  color: white;
+  margin-top: 10px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.h2 {
+  display: block;
+  height: 100%;
+  color: white;
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.h22 {
+  height: 100%;
+  color: white;
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.h222 {
+  display: none;
+}
+.retangulo img {
+  height: 60px;
+  width: auto; 
+  margin: 5px 10px 5px 5px;
+}
+.rodape {
+  margin-top: 35px;
+  width: 100%;
+  height: 230px;
+  background-color: rgb(4, 4, 20);
+}
+.logofinal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.logo2 {
+  margin-top: 20px;
+  height: 71px;
+  width: 71px;
+}
+.desc {
+  font-size: 20px;
+  margin-top: 25px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.redessociais {
+  margin-top: 40px;
+  gap: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.itens {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+}
+.card {
+  width: 200px;
+  height: 290px;
+  border-radius: 15px;
+  margin-top: 40px;
+  background-color: rgb(7, 9, 75);
+  border: 3px solid red;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.gift {
+  width: 130px;
+  height: 180px;
+  margin-top: 20px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.imagem {
+  display: flex;
+  justify-content: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.text-main {
+  text-align: center;
+  color: rgb(255, 255, 255);
+  font-weight: 600;
+  font-size: 20px;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.preço {
+  color: white;
+  font-weight: 300;
+  margin-left: 20px;
+  font-size: 18px;
+  font-family: "Ubuntu", sans-serif;
+}
+
+@media (min-width: 768px) {
+  .h222 {
+      display: block;
   }
-  a:hover {
-    color: #747bff;
+  .topo {
+      background-color: rgb(93, 49, 134);
   }
-  button {
-    background-color: #f9f9f9;
+  .subtopo {
+      height: 60px;
   }
+  .h2 {
+      display: none;
+  }
+  .anuncio {
+      display: block;
+  }
+  .itens {
+      grid-template-columns: repeat(3, auto);
+  }
+  .rodape {
+      margin-top: 35px;
+      width: 100%;
+      height: 230px;
+      background-color: rgb(4, 4, 20);
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center; 
+  }
+  .logo2{
+      height: 90px;
+      width: 90px;
+  }
+  .logofinal {
+      position: absolute;
+      left: 300px;
+  }
+  
+  .boxfinal {
+      text-align: center;
+  }
+  
 }
