--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,11 +1,11 @@
-.anuncio {
+.Banner {
   display: none;
   width: 100%;
   height: 360px;
 }
 
 @media (min-width: 768px) {
-  .anuncio {
+  .Banner {
       display: block;
   }
 }
